Added tmux syle fix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,7 +55,7 @@ bind-key -n C-l select-pane -R
 unbind-key '"'
 unbind-key %
 bind-key - split-window -v -c "#{pane_current_path}"
-bind-key \\ split-window -h -c "#{pane_current_path}"
+bind-key \ split-window -h -c "#{pane_current_path}"
 bind-key _ split-window -fv -c "#{pane_current_path}"
 bind-key | split-window -fh -c "#{pane_current_path}"
 
@@ -69,8 +69,8 @@ bind-key -n M-l resize-pane -R 2
 bind-key -n C-z resize-pane -Z
 
 # Move panes
-unbind-key \{
-unbind-key \}
+unbind-key {
+unbind-key }
 bind-key -r H swap-pane -U
 bind-key -r L swap-pane -D
 
@@ -134,7 +134,7 @@ set -g status-left "#{?client_prefix,#[bg=colour2],#[bg=colour52]} #S #[fg=white
 # Right side of status bar
 set -g status-right-style bg=black,fg=cyan
 set -g status-right-length 50
-set -g status-right "#[fg=colour0,bg=colour39] #(cut -d' ' -f-3 /proc/loadavg) #[fg=colour0,bg=colour178] %H:%M %d-%b-%y #[fg=colour0,bg=colour202] #(whoami)@#h "
+set -g status-right "#[fg=colour0,bg=colour39,bold] #(cut -d' ' -f-3 /proc/loadavg) #[fg=yellow,bg=colour178,bold] %H:%M %d-%b-%y #[fg=colour0,bg=colour250,bold] #(whoami)@#h "
 
 # Window status
 set -g window-status-format " #I:#W#F "
